# lab3-sem3

./: CMakeLists.txt  array.cpp  data.txt  go.mod  hash.txt  hashtable.cpp  header.h  list.cpp  main.cpp  serialization  serialization.cpp  serialization.h
cplus/: array.cpp  dlist.cpp  hashtable.cpp  header.h  list.cpp  main.cpp  queue.cpp  stack.cpp  test  tree.cpp
golang/: data.txt  hash  hash.go  hash_test.go  serialization.go
tests_cplus/: test_array.cpp  test_dlist.cpp  test_hashtable.cpp  test_list.cpp  test_queue.cpp  test_stack.cpp  test_tree.cpp
tests_golang/: hash_table.txt  hash_test.go  main  main.go
